changed % to vw in titlebox in hopes of fixing the overflow problem

--- a/site/css/article.css
+++ b/site/css/article.css
@@ -86,7 +86,7 @@ body{
     border-color: #ffc20e;
     position: fixed; /* sta fermo */
     top: 0; 
-    width: 100%;
+    width: 100vw;
     height: max(2.7em, 10%);
     z-index: 4;
     justify-content: center;
